06_rect/grade.txt
Grading at Tue Sep  8 08:56:02 UTC 2020
Attempting to compile rectangle.c
rectangle.c:43:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
The code did not compile!

Overall Grade: F
